<resources>
    <string name="app_name">MyMessenger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">email</string>
    <string name="add_account">Add account</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search">Search</string>
    <string name="profile_token">profile_token</string>
    <string name="name">Name</string>
    <string name="help">help</string>
    <string name="uno">Uno</string>
    <string name="message">Message</string>
    <string name="first_name">surename</string>
    <string name="default_web_client_id">818837058286-t8d22ulo9mkml692brobmtp9oa7rie2a.apps.googleusercontent.com</string>
    <string name="sign_in_with_google">Sign in with Google</string>
</resources>