<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainUi.profile.ProfileFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_margin="16dp"
        android:background="@drawable/arrow___left" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_gravity="center"
        app:cardCornerRadius="49dp"
        android:layout_marginTop="52dp"
        app:strokeColor="@color/pink77"
        app:strokeWidth="3dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center"
            android:background="@drawable/person" />
    </com.google.android.material.card.MaterialCardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/profile_name"
            android:background="@drawable/edit" />
    </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="1dp"
        android:layout_marginVertical="3dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/pink77"
        app:strokeWidth="2dp">

        <TextView
            android:id="@+id/profile_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            android:hint="@string/profile_token"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/baseline_token_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="1dp"
        android:layout_marginVertical="3dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/pink77"
        app:strokeWidth="2dp">

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/baseline_email_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/Add_account"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="1dp"
        android:layout_marginVertical="3dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/pink77"
        app:strokeWidth="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            android:hint="@string/add_account"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/baseline_person_add_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="1dp"
        android:layout_marginVertical="3dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/pink77"
        app:strokeWidth="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            android:hint="@string/log_out"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/log_out_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/baseline_logout_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/delete_account"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="1dp"
        android:layout_marginVertical="3dp"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/pink77"
        app:strokeWidth="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="42dp"
            android:hint="@string/delete_account"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/icons8_delete"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"/>
    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="22dp"
        android:text="@string/help"
        android:textColor="@color/blackC5"
        android:textSize="16sp" />
</LinearLayout>