<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainUi.sing_in.SignIn">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:layout_margin="1.6dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/signIn_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:visibility="gone"/>
            <com.google.android.material.button.MaterialButton
                android:visibility="visible"
                android:id="@+id/signIn_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="16sp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/pink77"/>

            <LinearLayout
                android:id="@+id/or_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signIn_button"
                android:layout_marginTop="26dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="52dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1.2dp"
                    android:layout_weight="1"
                    android:background="@color/blackC5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="5dp"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1.2dp"
                    android:layout_weight="1"
                    android:background="@color/blackC5"/>
            </LinearLayout>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/signIn_with_google"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_below="@id/or_layout"
                android:background="@color/white"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="32dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/icon_google"
                        android:layout_margin="3dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_with_google"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:layout_margin="3dp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

    </LinearLayout>
</FrameLayout>